# offset-bridge

./: .env.example  .gitignore  .gitmodules  README.md  package-lock.json  package.json  pnpm-lock.yaml  remappings.txt  tsconfig.json
.github/workflows/: ci.yml
backend/contracts/: DAO.sol  NFTMarketplace.sol
constants/: index.js  index.ts
dao-backend/: hardhat.config.js
dao-frontend/: constants.js
docs/: Solana Carbon Retirement.puml
evm-contract/: remappings.txt
foundry-scripts/: deploy.s.sol
retirement-ui/: next.config.js  package.json  postcss.config.js
scripts/: bridge.ts  bridgeNFT.ts  constants.ts  createATAs.ts  createHoldingContract.ts  deploy.s.sol  depositUSDC.ts  getNCTBalanceOfTCO2.ts  getRetireContract.ts  getSelectedTCO2.ts  getSolanaAddress.ts  getState.ts  getStateAddresses.ts  getVAAForTx.ts  initialize.ts  initializeState.ts  jupiterDirect.ts  jupiterDirectApiV6.ts  lookupTCO2.ts  redeemAndRetire.ts  redeemPolygonVAA.ts  retireFunds.ts  sendMatic.ts  setHoldingContractAdmin.ts  setRetireContract.ts  setSelectedTCO2.ts  swap.ts  swapJupiterApiV6.ts  transfer.ts  transferNFT.ts  util.ts  wrapSOL.ts
scripts/types/: token_swap.ts  (+1 more)
solana-contract/: Anchor.toml
solana-contract/programs/swap-bridge/: Cargo.toml
solana-contract/programs/swap-bridge/src/: lib.rs
solana-contract/programs/swap-bridge/src/util/: bridge.rs  errors.rs  mod.rs  swap.rs  token.rs
src/: CarbonOffsetSettler.sol  CloneFactory.sol  HoldingContract.sol  HoldingContractFactory.sol  HoldingContractProxy.sol  HoldingFactoryContract.sol  n.sol
token-swap/: Anchor.toml  package.json  pnpm-lock.yaml
token-swap/programs/token-swap/: Cargo.toml
token-swap/programs/token-swap/src/: lib.rs
token-swap/programs/token-swap/src/util/: bridge.rs  errors.rs  mod.rs  swap.rs  token.rs
ui/: package.json  tailwind.config.js
(+167 files in other folders)
