[package]
name = "swap-bridge"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
ahash = "=0.7.8"
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-associated-token-account = "3.0.4"
pyth-sdk-solana = "0.10.1"
hex = "0.4.3"
#lazy_static = "1.4.0"
#once_cell = "1.17.2"
#toml_datetime = "0.6.2"
#winnow="0.4.6"